<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/astro"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/frame"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/longitude"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/longitude"
                android:textColor="#000000"
                android:textColorHighlight="#FFFFFF"
                android:textColorLink="#FFFFFF"
                android:textSize="@dimen/settings_size" />

            <EditText
                android:id="@+id/editLongitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/zero"
                android:inputType="numberDecimal"
                android:textColor="#FFFFFF"
                android:textColorHint="#AAAAAA"
                android:textSize="@dimen/settings_size" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/latitude"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/latitude"
                android:textColor="#000000"
                android:textSize="@dimen/settings_size" />

            <EditText
                android:id="@+id/editLatitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/zero"
                android:inputType="numberDecimal"
                android:textColor="#FFFFFF"
                android:textColorHint="#AAAAAA"
                android:textSize="@dimen/settings_size" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/refresh"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/refresh"
                android:textColor="#000000"
                android:textSize="@dimen/settings_size" />

            <Spinner
                android:id="@+id/selectRefresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/list"
                android:gravity="center_vertical"
                android:scrollbarSize="@dimen/settings_size" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/enter"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button_grey"
        android:text="@string/enter"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="@id/table"
        app:layout_constraintStart_toStartOf="@id/table"
        app:layout_constraintTop_toBottomOf="@id/table" />

</androidx.constraintlayout.widget.ConstraintLayout>