<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/frame_sun"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".MoonFragment">


    <TextView
        android:id="@+id/title_sun"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="20dp"
        android:drawableEnd="@drawable/sun"
        android:gravity="center"
        android:text="@string/sun"
        android:textColor="#F36800"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TableLayout
        android:id="@+id/sun_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_sun">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:gravity="bottom"
                android:text="@string/sunrise_time"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sunrise_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom|end"
                android:textColor="#000000"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:text="@string/sunrise_azimuth"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sunrise_azimuth"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom|end"
                android:textColor="#000000"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/texView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:gravity="bottom"
                android:text="@string/sunset_time"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sunset_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom|end"
                android:textColor="#000000"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:gravity="bottom"
                android:text="@string/sunset_azimuth"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sunset_azimuth"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom|end"
                android:textColor="#000000"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/texView11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:gravity="bottom"
                android:text="@string/twilight_morning"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/twilight_morning"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom|end"
                android:textColor="#000000"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:gravity="bottom"
                android:text="@string/twilight_evening"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/twilight_evening"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom|end"
                android:textColor="#000000"
                android:textSize="20sp"/>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>